Fixed: max-with issue on small screens

--- a/front-end/src/css/style.css
+++ b/front-end/src/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .middle {
-  width: 25em;
+  max-width: 25em;
 }
 
 form {
